--- a/ChallengeCountries/Base.lproj/Main.storyboard
+++ b/ChallengeCountries/Base.lproj/Main.storyboard
@@ -316,10 +316,10 @@
             </objects>
             <point key="canvasLocation" x="2004" y="-312.59370314842579"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Countries Navigation Controller-->
         <scene sceneID="Lzy-hr-3eD">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="wT9-Ne-gdc" customClass="NavigationController" customModule="ChallengeCountries" customModuleProvider="target" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="wT9-Ne-gdc" customClass="CountriesNavigationController" customModule="ChallengeCountries" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="hIW-YO-25M">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
