--- a/ChallengeCountries/Base.lproj/Main.storyboard
+++ b/ChallengeCountries/Base.lproj/Main.storyboard
@@ -102,7 +102,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="Страны" id="wfP-2g-VXx"/>
                     <connections>
-                        <outlet property="spinner" destination="cLA-pN-Oxw" id="hXb-An-761"/>
+                        <outlet property="activityIndicator" destination="cLA-pN-Oxw" id="hXb-An-761"/>
                         <outlet property="tableView" destination="Zy5-Rg-Vgt" id="2Sp-Ol-Uja"/>
                     </connections>
                 </viewController>
@@ -322,7 +322,6 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="wT9-Ne-gdc" customClass="CountriesNavigationController" customModule="ChallengeCountries" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="hIW-YO-25M">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
